tests/invalid/test_may_duplicate.err_exp2
test_may_duplicate.m:033: Error: the [38;5;171m`may_duplicate' attribute[39;49m on the
test_may_duplicate.m:033:   foreign_proc is [38;5;203mnot compatible[39;49m with the
test_may_duplicate.m:033:   [38;5;171m`:- pragma no_inline' declaration[39;49m on the predicate.
test_may_duplicate.m:055: Error: the [38;5;171m`may_not_duplicate' attribute[39;49m on the
test_may_duplicate.m:055:   foreign_proc is [38;5;203mnot compatible[39;49m with the
test_may_duplicate.m:055:   [38;5;171m`:- pragma inline' declaration[39;49m on the predicate.
